--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.3",
     "mongoose": "^8.8.4",
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-image-gallery": "^1.3.0",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15"
